tests/NormalTests/paczka1/fuzzy1/68401254.err
Error in line 1: YAv4WJPQhp S783 93,5
Error in line 2: JEJORYqcd2 A572 54,9
Error in line 6: JEJORYqcd2 A628 5,8
Error in line 16: vNZ A628 49,0
Error in line 18: vNZ A572 8,4
Error in line 10: JEJORYqcd2 A572 16,5
Error in line 20: JEJORYqcd2 A628 21,1
Error in line 27: JEJORYqcd2 S783 14,8
